Kudos header height to fix avatar overlap

--- a/app/assets/stylesheets/kudos/components/_kudo.scss
+++ b/app/assets/stylesheets/kudos/components/_kudo.scss
@@ -46,7 +46,7 @@
 }
 
 .kudo__receiver {
-  // text-align: center;
+  height: 50px; // match the height of .kudo__avatar img
 }
 
 .kudo__message {
